# hud_ws

./: .gitignore  .gitmodules  README.md  colcon_defaults.yaml  custom_rosdep.yaml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: init_rosdep.sh  update_rosdep.sh
src/rome_hud/: CMakeLists.txt  README.md  hud_plugins.xml  package.xml
src/rome_hud/debian_scripts/: clean.sh
src/rome_hud/examples/: CMakeLists.txt  show.cpp
src/rome_hud/include/rome_hud/: hud_item.hpp
src/rome_hud/src/: hud.cpp  hud_tester.cpp
src/rome_hud/src/plugins/: fid.cpp  master_caution.cpp  sm_status.cpp  tracker_hud_item.cpp
src/rome_interfaces/: CMakeLists.txt  package.xml
src/rome_interfaces/debian_scripts/: clean.sh
src/rome_interfaces/msg/: AttitudeControl.msg  BoardState.msg  GCSTelemetry.msg  GimbalStatus.msg  PIDdiagnostic.msg  RomeJoystick.msg  StateMachine.msg  TrackerRequest.msg  TrackerResult.msg
src/rome_interfaces/srv/: CommandLong.srv  GimbalMode.srv  SetString.srv
